Remove unused FXML views and associated resources, including cadastroPenaView, cadastroRegistroDeTrabalhoView, cadastroTipoInstituicao, detalheApenadoView, login, redefinirSenha, telaCadastroUsuario, and style.css. Update utility classes by removing CapturaRosto and modifying HashUtil, SessaoUsuario, and ValidadorCPF. Ensure all changes maintain project integrity and functionality.